docs/changes/1.0.0/characters/Fox.md
# Fox — 1.0.0

## Changes

### Jab / Tilts

**Jab**
removed rapid jab
jab 2 can cancel into grab and specials
jab 3 is now low angled f tilt

**Forward Tilt**
side damage: 6 → 8
down angle: 361 → 60
side angle: 361 → 20
bkb: 10 → 60
kbg: 100 → 55

**Up Tilt**
damage: 8 → 9
strong hit bkb: 22 → 35 → 40
weak hit bkb: 18 → 25 → 40
kbg: 110 → 90

**Down Tilt**
iasa: 28 → 22
id0 angle: 45 → 70
hitbox sizes: 3 → 4
given more range

### Aerial Attacks

**Forward Air**
has a new 2-hit fair
removed momentum shifting
first hit angle: 75 → 365
first hit skb: 10
first hit bkb: 10 → 35
between hits sped up 1.4x
2nd hit active frames: 2 → 4
endlag slowed .85x
reverted back to vanilla brawl animation with new multihit properties
now a kill move on the final hit

**Back Air**
damage: 15 → 17 → 16
kbg: 85 → 90 → 93
bkb: 20 → 30
sped up endlag 1.5x
startup sped up 2x

**Neutral Air**
angle: 361 → 50 → 55
damage: 9/6 → 10/8
hitbox sizes increased
sped up endlag 1.5/1.7

**Up Air**
kbg: 100 → 120 → 125
first hit sdi multiplier: 1 → .2
first hit angle: 92 → 365
between hits sped up 1.5x
2nd hit damage: 11 → 13
between hits sped up 1.5 → 2.5x

**Down Air**
hitlag multiplier: 1 → .85
bkb: 33 → 15 → 25
damage: 3 → 2
first active frame: 4 → 5
multihit angle: 285 → 365
startup slowed .8x
added another hitbox to cover more of fox's body

### Smash Attacks

**Forward Smash**
kbg: 96 → 112
damage: 15 → 16
bkb: 10 → 15

**Up Smash**
kbg: 96 → 115 → 103
bkb: 30 → 27 → 30
damage: 17 → 18
improved hitbox placement

**Down Smash**
made both sides the same
damage: 14/12 → 16
bkb: 50 → 40

### Special Moves

**Neutral B**
lasers last much longer
laser damage takes longer to fall off
startup sped up 1.8x
laser damage: 3 → 4

**Down B**
shine is reworked: no longer jump cancelable, now cancelable by ground actions (crouching, dashing, walking, etc.); cannot be canceled in the air
increased endlag + startup
startup: 3 → 5
reduced active frames on hitbox
angle (grounded opponents): 10 → 80 → 10 → 20
skb: 30
bkb (grounded opponents): 30 → 35
damage: 5 → 3 → 4 → 5
hitbox size: 6 → 7.5 → 10
shine is no longer invincible on startup
sdi multiplier: 1 → .6
sped up the whole move slightly, hitbox comes out frame 3
air angle: 20 → 0
air skb removed

**Up B**
startup sped up 1.7x

### Other

**Dash Attack**
damage: 7/5 → 9/8 → 11/9
bkb: 35 → 60
kbg: 90 → 60

**Down Throw**
angle: 60 → 75
kbg: 100 → 60
bkb: 85 → 80

**Up Throw**
endlag sped up 1.5x
now halts momentum

**Back Throw**
sped up 1.6x
angle: 45 → 65

fox has been scaled up slightly, its been bugging me how small he is
buffed ground to air momentum

### Character Parameters

| Parameter | Change |
|-----------|--------|
| Run Speed | 2.08 → 2.2 → 2.35 |
| Short Hop | 2.485 → 2.5 |
| Fall Speed | increased |
| Gravity | increased |
| Weight | 80 → 94 |
